examples/test/testpolicy18568.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18568
  namespace: namespace403
spec:
  podSelector:
    matchLabels:
      key15: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value12
          key43: value23
      podSelector:
        matchLabels:
          key46: value28
          key9: value5
